Added parallax example

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -97,6 +97,58 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "17d34904": {
+          "id": "17d34904",
+          "path": "images/bg_1.jpg",
+          "output": "images/bg_1.jpg",
+          "name": "bg_1.jpg",
+          "category": "IMAGE",
+          "size": 360498,
+          "type": "jpg",
+          "initialSize": 360498,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "34851ffe": {
+          "id": "34851ffe",
+          "path": "images/bg_2.jpg",
+          "output": "images/bg_2.jpg",
+          "name": "bg_2.jpg",
+          "category": "IMAGE",
+          "size": 138582,
+          "type": "jpg",
+          "initialSize": 138582,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "69202aa8": {
+          "id": "69202aa8",
+          "path": "images/bg_0.jpg",
+          "output": "images/bg_0.jpg",
+          "name": "bg_0.jpg",
+          "category": "IMAGE",
+          "size": 111504,
+          "type": "jpg",
+          "initialSize": 111504,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "aebef062": {
+          "id": "aebef062",
+          "path": "images/geek.png",
+          "output": "images/geek.png",
+          "name": "geek.png",
+          "category": "IMAGE",
+          "size": 74881,
+          "type": "png",
+          "initialSize": 74881,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
