--- a/prepros.cfg
+++ b/prepros.cfg
@@ -123,6 +123,19 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "7c3f2c63": {
+          "id": "7c3f2c63",
+          "path": "images/aconer.png",
+          "output": "images/aconer.png",
+          "name": "aconer.png",
+          "category": "IMAGE",
+          "size": 54830,
+          "type": "png",
+          "initialSize": 54830,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
