Updated Carousel + Home-Section1

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -136,6 +136,19 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "99628db8": {
+          "id": "99628db8",
+          "path": "homemockup.png",
+          "output": "homemockup.png",
+          "name": "homemockup.png",
+          "category": "IMAGE",
+          "size": 25354,
+          "type": "png",
+          "initialSize": 25354,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
